:bug: fix bug
navbar color overlap detail

--- a/src/components/styles/Nav.css
+++ b/src/components/styles/Nav.css
@@ -2,7 +2,7 @@
     background-color: rgb(31,36,34)	;
 }
 
-.container{
+.wrapper {
     margin: 0px;
     padding: 0px;
     width: 100%;
